--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="propeller" content="3dad2870657bb115f34eab1f5ede5b71">
-    <title>Cryptonst - Read Top News in the Crypto Industry, Interact and Get Rewards</title>
+    <title>Cryptonyst - Read Top News in the Crypto Industry, Interact and Get Rewards</title>
     <!-- Bootstrap CSS-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <!-- Custom CSS-->
@@ -24,10 +24,9 @@
                         <li><a href="/register">Register</a></li>
                         <!-- <li><a href="/about">About</a></li> -->
                     <% } else { %>
-                        <li><a href="/">Home</a></li>
+                        <!-- <li><a href="/">Home</a></li> -->
                         <li><a href="/blogs">News</a></li>
-                        <!-- <li><a href="/about">About</a></li> -->
-                        <li><a href="#">Profile</a></li>
+                        <li><a href="/profile">Profile</a></li>
                         <li><a href="/logout">Sign out</a></li>
                     <% } %>
                 </ul>
