add contact mail

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -21,8 +21,8 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <h4>Contact</h4>
-                    <p>Having issues? support.cryptonst@gmail.com</p>
-                    <p>Beta emails: beta.cryptonst@gmail.com</p>
+                    <p>Having issues? support.cryptonyst@gmail.com</p>
+                    <p>info.cryptonyst@gmail.com</p>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <h4>Social</h4>
