--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,7 +1,7 @@
 
 body {
-    font-family: 'Vollkorn', sans-serif;
-    font-size: 18px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 15px;
     color: #333; 
 }
 
