--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,6 +1,6 @@
 
 body {
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 18px;
     color: #333; 
 }
