--- a/views/blogs/index.ejs
+++ b/views/blogs/index.ejs
@@ -9,7 +9,7 @@
                         <div class="caption">
                             <h3><a href="/blogs/<%= blog._id %>"><%= blog.title %></a></h3>
                             <p><%- blog.content.substring(0, 50) %>...</p>
-                            <p id="created"><span id="author"><%= blog.author.username %></span> - <%= blog.created.toDateString() %></p>
+                            <p id="created"><span id="author"><%= blog.author.username %> - <%= blog.created.toDateString() %></span></p>
                         </div>
                         <br>
                         <br>
