--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -6,7 +6,7 @@
                 <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <h4>About Us</h4>
-                    <p> Cryptonst is a Crypto News platform to stay up to date with trending news,
+                    <p> Cryptonyst is a Crypto News platform to stay up to date with trending news,
                         promote crypto, discuss crypto and earn Bitcoin.
                     </p>
                 </div>
@@ -15,7 +15,7 @@
                     <ul class="info">
                         <li><a href="#">Privacy Policy</a></li>
                         <li><a href="#">Q&A</a></li>
-                        <li><a href="#">Chat</a></li>
+                        <!-- <li><a href="#">Chat</a></li> -->
                         <li><a href="#">Write for us</a></li>
                     </ul>
                 </div>
