--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,7 +1,8 @@
 
 body {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 16px;
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 15px;
+    font-weight: 400;
     color: #333; 
 }
 
