--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -36,6 +36,9 @@
     </script>
 </head>
 <body>
+    <!-- Propeller Popunder -->
+        <script type="text/javascript" src="//deloplen.com/apu.php?zoneid=2643141" async data-cfasync="false"></script>
+
         <nav class="navbar">
             <div class="container">
                 <ul class="flex">
