--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Bitcoin, Ethereum, Finance, EOS, Investing, Crypto News">
+    <meta name="description" content="Cryto News platform to stay up to date with trends in the crypto ecosystem. Read, share and earn Bitcoin converted to your local currency">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
