--- a/views/blogs/index.ejs
+++ b/views/blogs/index.ejs
@@ -4,7 +4,7 @@
     <div id="top2">
         <div class="row">
             <% blogs.forEach((blog) => { %>
-                <div class="col-md-3 col-sm-6 thumb">
+                <div class="col-md-3 col-sm-6 thumb" style="display: flex; flex-wrap: wrap;">
                         <img src="<%= blog.image %>" />
                         <div class="caption">
                             <h3><a href="/blogs/<%= blog._id %>"><%= blog.title %></a></h3>
