--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -29,6 +29,7 @@
     <link href="https://fonts.googleapis.com/css?family=Spectral|Noto+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 
+    <!-- Google Adsense -->
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
     (adsbygoogle = window.adsbygoogle || []).push({
@@ -36,14 +37,17 @@
         enable_page_level_ads: true
     });
     </script>
+    <!--  -->
+
+    <!-- 1 -->
     <script src="//propu.sh/ntfc.php?p=2642239" data-cfasync="false" async>
     </script>
-</head>
-<body>
-    <!-- Propeller Popunder -->
-        <script type="text/javascript" src="//deloplen.com/apu.php?zoneid=2643141" async data-cfasync="false"></script>
 
-        <!-- PopAds.net Popunder Code for www.cryptonyst.online -->
+    <!-- 2 -->
+    <script src="//pushalarm.com/ntfc.php?p=2642239" data-cfasync="false" async>
+    </script>
+
+    <!-- PopAds.net Popunder Code for www.cryptonyst.online -->
     <script type="text/javascript" data-cfasync="false">
     /*<![CDATA[/* */
       var _pop = _pop || [];
@@ -68,6 +72,10 @@
     /*]]>/* */
     </script>
     <!-- PopAds.net Popunder Code End -->
+</head>
+<body>
+    <!-- Propeller Popunder -->
+    <script type="text/javascript" src="//deloplen.com/apu.php?zoneid=2643141" async data-cfasync="false"></script>
 
         <nav class="navbar">
             <div class="container">
