--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -3,7 +3,8 @@ body {
     font-family: 'Noto Sans', sans-serif;
     font-size: 15px;
     font-weight: 400;
-    color: #333; 
+    color: #333;
+    background-color: #F2F4F6; 
 }
 
 h1, h2, h3, h4, h5, h6 {
