remove non-used

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,14 +8,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-140856709-1"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-140856709-1"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
     gtag('config', 'UA-140856709-1');
-    </script>
+    </script> -->
 
     <!-- Propeller -->
     <meta name="propeller" content="f5fa74615d57f624cbf14f178fe7a0c2">
@@ -30,25 +30,25 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 
     <!-- Google Adsense -->
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
     (adsbygoogle = window.adsbygoogle || []).push({
         google_ad_client: "ca-pub-7708204666443021",
         enable_page_level_ads: true
     });
     </script>
-    <!--  -->
+     -->
 
     <!-- 1 -->
-    <script src="//propu.sh/ntfc.php?p=2642239" data-cfasync="false" async>
-    </script>
+    <!-- <script src="//propu.sh/ntfc.php?p=2642239" data-cfasync="false" async>
+    </script> -->
 
     <!-- 2 -->
-    <script src="//pushalarm.com/ntfc.php?p=2642239" data-cfasync="false" async>
-    </script>
+    <!-- <script src="//pushalarm.com/ntfc.php?p=2642239" data-cfasync="false" async>
+    </script> -->
 
     <!-- PopAds.net Popunder Code for www.cryptonyst.online -->
-    <script type="text/javascript" data-cfasync="false">
+    <!-- <script type="text/javascript" data-cfasync="false">
     /*<![CDATA[/* */
       var _pop = _pop || [];
       _pop.push(['siteId', 3373609]);
@@ -70,12 +70,12 @@
         s.parentNode.insertBefore(pa, s);
       })();
     /*]]>/* */
-    </script>
+    </script> -->
     <!-- PopAds.net Popunder Code End -->
 </head>
 <body>
     <!-- Propeller Popunder -->
-    <script type="text/javascript" src="//deloplen.com/apu.php?zoneid=2643141" async data-cfasync="false"></script>
+    <!-- <script type="text/javascript" src="//deloplen.com/apu.php?zoneid=2643141" async data-cfasync="false"></script> -->
 
         <nav class="navbar">
             <div class="container">
