--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,7 +26,7 @@
     
     <!-- Custom CSS-->
     <link rel="stylesheet" href="/stylesheets/app.css">
-    <link href="https://fonts.googleapis.com/css?family=Spectral|Noto+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 
     <!-- Google Adsense -->
