--- a/views/blogs/index.ejs
+++ b/views/blogs/index.ejs
@@ -3,18 +3,27 @@
 <div class="container">
     <div id="top2">
         <div class="row">
-            <% blogs.forEach((blog) => { %>
-                <div class="col-md-3 col-sm-6 thumb" style="display: flex; flex-wrap: wrap;">
-                        <img src="<%= blog.image %>" />
-                        <div class="caption">
-                            <h3><a href="/blogs/<%= blog._id %>"><%= blog.title %></a></h3>
-                            <p><%- blog.content.substring(0, 50) %>...</p>
-                            <p id="created"><span id="author"><%= blog.author.username %> - <%= blog.created.toDateString() %></span></p>
-                        </div>
-                        <br>
-                        <br>
-                </div>
-            <% }) %>
+            <div class="col-md-9">
+                <% blogs.forEach((blog) => { %>
+                    <div class="col-md-3 col-sm-6 thumb" style="display: flex; flex-wrap: wrap;">
+                            <img src="<%= blog.image %>" />
+                            <div class="caption">
+                                <h3><a href="/blogs/<%= blog._id %>"><%= blog.title %></a></h3>
+                                <p><%- blog.content.substring(0, 50) %>...</p>
+                                <p id="created"><span id="author"><%= blog.author.username %> - <%= blog.created.toDateString() %></span></p>
+                            </div>
+                            <br>
+                            <br>
+                    </div>
+                <% }) %>
+            </div>
+            <div class="col-md-3">
+            <p class="lead">Quick Links</p>
+            <div class="list-group">
+                <li class="list-group-item active">Archive</li>
+                <li class="list-group-item">Chat</li>
+                <li class="list-group-item">Search</li>
+            </div>
         </div>
     </div>
 </div>
