--- a/views/blogs/index.ejs
+++ b/views/blogs/index.ejs
@@ -20,7 +20,7 @@
             <div class="col-md-3">
             <p class="lead">Quick Links</p>
             <div class="list-group">
-                <li class="list-group-item active">Archive</li>
+                <li class="list-group-item active_aside">Archive</li>
                 <li class="list-group-item">Chat</li>
                 <li class="list-group-item">Search</li>
             </div>
