--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,7 +26,9 @@
     
     <!-- Custom CSS-->
     <link rel="stylesheet" href="/stylesheets/app.css">
-    <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,700|Raleway:400,500,700&display=swap" rel="stylesheet">
+    <!-- Font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 
     <!-- Google Adsense -->
