--- a/views/blogs/index.ejs
+++ b/views/blogs/index.ejs
@@ -22,7 +22,9 @@
             <div class="list-group">
                 <li class="list-group-item active_aside">Archive</li>
                 <li class="list-group-item">Chat</li>
+                <li class="list-group-item">Getting Started</li>
                 <li class="list-group-item">Search</li>
+                <li class="list-group-item">FAQ</li>
             </div>
         </div>
     </div>
