--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="/stylesheets/app.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,700|Raleway:400,500,700&display=swap" rel="stylesheet">
-    <!-- Font awesome -->
+    <!-- Font awesome-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 
     <!-- Google Adsense -->
@@ -41,43 +41,14 @@
     </script>
      -->
 
-    <!-- 1 -->
-    <!-- <script src="//propu.sh/ntfc.php?p=2642239" data-cfasync="false" async>
-    </script> -->
+    <script src="//propu.sh/ntfc.php?p=2642239" data-cfasync="false" async>
+    </script>
 
-    <!-- 2 -->
-    <!-- <script src="//pushalarm.com/ntfc.php?p=2642239" data-cfasync="false" async>
-    </script> -->
-
-    <!-- PopAds.net Popunder Code for www.cryptonyst.online -->
-    <!-- <script type="text/javascript" data-cfasync="false">
-    /*<![CDATA[/* */
-      var _pop = _pop || [];
-      _pop.push(['siteId', 3373609]);
-      _pop.push(['minBid', 0]);
-      _pop.push(['popundersPerIP', 0]);
-      _pop.push(['delayBetween', 0]);
-      _pop.push(['default', false]);
-      _pop.push(['defaultPerDay', 0]);
-      _pop.push(['topmostLayer', false]);
-      (function() {
-        var pa = document.createElement('script'); pa.type = 'text/javascript'; pa.async = true;
-        var s = document.getElementsByTagName('script')[0]; 
-        pa.src = '//c1.popads.net/pop.js';
-        pa.onerror = function() {
-          var sa = document.createElement('script'); sa.type = 'text/javascript'; sa.async = true;
-          sa.src = '//c2.popads.net/pop.js';
-          s.parentNode.insertBefore(sa, s);
-        };
-        s.parentNode.insertBefore(pa, s);
-      })();
-    /*]]>/* */
-    </script> -->
-    <!-- PopAds.net Popunder Code End -->
+    <script src="//pushalarm.com/ntfc.php?p=2642239" data-cfasync="false" async>
+    </script>
 </head>
 <body>
-    <!-- Propeller Popunder -->
-    <!-- <script type="text/javascript" src="//deloplen.com/apu.php?zoneid=2643141" async data-cfasync="false"></script> -->
+    <script type="text/javascript" src="//deloplen.com/apu.php?zoneid=2643141" async data-cfasync="false"></script>
 
         <nav class="navbar">
             <div class="container">
