--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,7 +1,8 @@
 
 body {
-    font-family: 'Raleway', sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 14px;
+    line-height: 28px;
     font-weight: 400;
     color: #333;
 }
@@ -156,7 +157,6 @@ label {
 footer {
   margin: 100px 0 0;
   font-size: 14px;
-  font-weight: 600;
   font-family: 'Poppins', sans-serif;
 }
 
