--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -177,6 +177,26 @@ footer ul li a {
   font-size: 14px;
 }
 
+.pagination {
+  margin-top: 2rem;
+  text-align: center;
+}
+
+.pagination a {
+  text-decoration: none;
+  color: #ff4e00;
+  padding: 0.5rem;
+  border: 1px solid #ff4e00;
+  margin: 0 1rem;
+}
+
+.pagination a:hover,
+.pagination a:active,
+.pagination a.active {
+  background-color: #ff4e00;
+  color: #fff;
+}
+
 @media (max-width: 768px) {
   .form_container {
     width: 95%;
