--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -13,8 +13,8 @@
                 <div class="col-md-3 col-sm-6">
                     <h4>Info</h4>
                     <ul class="info">
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Q&A</a></li>
+                        <li><a href="#">Privacy</a></li>
+                        <li><a href="#">Cookie Policy</a></li>
                         <li><a href="#">Write for us</a></li>
                     </ul>
                 </div>
