--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -180,6 +180,15 @@ footer ul li a {
   padding-left: 0; 
 }
 
+.social {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.social li {
+  display: flex;
+}
+
 .info li a {
   text-decoration: underline;
 }
