--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -46,7 +46,8 @@ h1, h2, h3, h4, h5, h6 {
 .flex li {
   padding: 0 15px;
   font-weight: 600;
-  font-size: 13px;
+  letter-spacing: 2px;
+  font-size: 15px;
   font-family: 'Work Sans', sans-serif;
 }
 
