--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -48,7 +48,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 600;
   letter-spacing: 2px;
   font-size: 15px;
-  font-family: 'Work Sans', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 .flex li a {
