--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -26,8 +26,8 @@
                 <div class="col-md-3 col-sm-6">
                     <h4>Social</h4>
                     <ul class="social">
-                        <li><a href="https://twitter.com/cryptonyst1"><i class="fab fa-facebook"></i></a></li>
-                        <li><a href="https://facebook.com/cryptonyst1"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="https://facebook.com/cryptonyst1"><i class="fab fa-facebook"></i></a></li>
+                        <li><a href="https://twitter.com/cryptonyst1"><i class="fab fa-twitter"></i></a></li>
                     </ul>
                 </div>
             </div>
