--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -58,9 +58,7 @@
                         <li><a href="/blogs">News</a></li>
                         <li><a href="/login">Login</a></li>
                         <li><a href="/register">Register</a></li>
-                        <!-- <li><a href="/about">About</a></li> -->
                     <% } else { %>
-                        <!-- <li><a href="/">Home</a></li> -->
                         <li><a href="/blogs">News</a></li>
                         <li><a href="/profile">Profile</a></li>
                         <li><a href="/logout">Sign out</a></li>
@@ -68,6 +66,53 @@
                 </ul>
             </div>
         </nav>
+
+<div class="backdrop"></div>
+<header class="main-header">
+    <button id="side-menu-toggle">Menu</button>
+    <nav class="main-header__nav">
+        <ul class="main-header__item-list">
+            <% if(!currentUser) { %>
+            <li class="main-header__item">
+                <a href="/">Home</a>
+            </li>.
+            <li class="main-header__item">
+                <a href="/blogs">News</a>
+            </li>
+            <li class="main-header__item">
+                <a href="/login">Login</a>
+            </li>
+            <li class="main-header__item">
+                <a href="/register">Sign Up</a>
+            </li>
+        </ul>
+    </nav>
+</header>
+
+<nav class="mobile-nav">
+    <ul class="mobile-nav__item-list">
+        <li class="mobile-nav__item">
+            <a class="<%= path === '/' ? 'active' : '' %>" href="/">Shop</a>
+        </li>
+        <li class="mobile-nav__item">
+            <a class="<%= path === '/products' ? 'active' : '' %>" href="/products">Products</a>
+        </li>
+        <li class="mobile-nav__item">
+            <a class="<%= path === '/cart' ? 'active' : '' %>" href="/cart">Cart</a>
+        </li>
+        <li class="mobile-nav__item">
+            <a class="<%= path === '/orders' ? 'active' : '' %>" href="/orders">Orders</a>
+        </li>
+        <li class="mobile-nav__item">
+            <a class="<%= path === '/admin/add-product' ? 'active' : '' %>" href="/admin/add-product">Add Product
+            </a>
+        </li>
+        <li class="mobile-nav__item">
+            <a class="<%= path === '/admin/products' ? 'active' : '' %>" href="/admin/products">Admin Products
+            </a>
+        </li>
+        </ul>
+</nav>
     
         <div class="container">
             <% if(success && success.length > 0) { %>
