--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -85,6 +85,17 @@
             <li class="main-header__item">
                 <a href="/register">Sign Up</a>
             </li>
+            <% } else { %>
+            <li class="main-header__item">
+                <a href="/blogs">News</a>
+            </li>
+            <li class="main-header__item">
+                <a href="/profile">Profile</a>
+            </li>
+            <li class="main-header__item">
+                <a href="/logout">Sign Out</a>
+            </li>
+            <% } %>
         </ul>
     </nav>
 </header>
