--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -21,39 +21,14 @@ h1, h2, h3, h4, h5, h6 {
   margin: 60px auto;
 }
 
-.navbar {
-  margin-bottom: 10px;
-}
-
-.navbar, .active_aside {
+.active_aside {
   background: #ff4e00;
   color: #fff;
-}
-
-.flex {
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-  padding: 20px 0;
-  -ms-flex-align: center;
 }
 
 #pad {
   padding: 20px;
   font-size: inherit; 
-}
-
-.flex li {
-  padding: 0 15px;
-  font-weight: 600;
-  letter-spacing: 2px;
-  font-size: 15px;
-  font-family: 'Poppins', sans-serif;
-}
-
-.flex li a {
-  text-decoration: none;
-  color: #fff;
 }
 
 .padding {
@@ -225,3 +200,5 @@ footer ul li a {
     margin: 0 auto;
   }
 }
+
+/* Navigation Styling */
