--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -205,7 +205,7 @@ footer ul li a {
 
 .main-header {
   width: 100%;
-  height: 3.5rem;
+  height: 4.5rem;
   background-color: #333;
   padding: 0 1.5rem;
   display: flex;
@@ -316,4 +316,15 @@ footer ul li a {
   background: rgba(0, 0, 0, 0.5);
   z-index: 5;
   display: none;
+}
+
+
+@media (min-width: 768px) {
+  .main-header__nav {
+    display: flex;
+  }
+
+  #side-menu-toggle {
+    display: none;
+  }
 }
