--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -206,7 +206,7 @@ footer ul li a {
 .main-header {
   width: 100%;
   height: 4.5rem;
-  background-color: #333;
+  background-color: #f2f3f7;
   padding: 0 1.5rem;
   display: flex;
   align-items: center;
@@ -232,13 +232,13 @@ footer ul li a {
 
 .main-header__item a {
   text-decoration: none;
-  color: white;
+  color: #ff4e00;
 }
 
 .main-header__item a:hover,
 .main-header__item a:active,
 .main-header__item a.active {
-  color: #ffeb3b;
+  color: #ff4e00;
 }
 
 .mobile-nav {
@@ -282,7 +282,7 @@ footer ul li a {
 .mobile-nav__item a:active,
 .mobile-nav__item a:hover,
 .mobile-nav__item a.active {
-  background: #00695c;
+  background: #ff4e00;
   color: white;
   border-radius: 3px;
 }
@@ -303,8 +303,8 @@ footer ul li a {
 
 #side-menu-toggle:active,
 #side-menu-toggle:hover {
-  color: #ffeb3b;
-  border-color: #ffeb3b;
+  color: #ff4e00;
+  border-color: #ff4e00;
 }
 
 .backdrop {
