--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -205,8 +205,8 @@ footer ul li a {
 
 .main-header {
   width: 100%;
-  height: 4.5rem;
-  background-color: #f2f3f7;
+  height: 6.5rem;
+  background-color: #333;
   padding: 0 1.5rem;
   display: flex;
   align-items: center;
@@ -232,7 +232,7 @@ footer ul li a {
 
 .main-header__item a {
   text-decoration: none;
-  color: #ff4e00;
+  color: #fff;
 }
 
 .main-header__item a:hover,
