--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -52,64 +52,68 @@
 
 <div class="backdrop"></div>
 <header class="main-header">
-    <button id="side-menu-toggle">Menu</button>
-    <nav class="main-header__nav">
-        <ul class="main-header__item-list">
+    <div class="container">
+        <button id="side-menu-toggle">Menu</button>
+        <nav class="main-header__nav">
+            <ul class="main-header__item-list">
+                <% if(!currentUser) { %>
+                <li class="main-header__item">
+                    <a href="/">Home</a>
+                </li>
+                <li class="main-header__item">
+                    <a href="/blogs">News</a>
+                </li>
+                <li class="main-header__item">
+                    <a href="/login">Sign In</a>
+                </li>
+                <li class="main-header__item">
+                    <a href="/register">Sign Up</a>
+                </li>
+                <% } else { %>
+                <li class="main-header__item">
+                    <a href="/blogs">News</a>
+                </li>
+                <li class="main-header__item">
+                    <a href="/profile">Profile</a>
+                </li>
+                <li class="main-header__item">
+                    <a href="/logout">Sign Out</a>
+                </li>
+                <% } %>
+            </ul>
+        </nav>
+    </div>
+</header>
+
+<nav class="mobile-nav">
+    <div class="container">
+        <ul class="mobile-nav__item-list">
             <% if(!currentUser) { %>
-            <li class="main-header__item">
+            <li class="mobile-nav__item">
                 <a href="/">Home</a>
             </li>
-            <li class="main-header__item">
+            <li class="mobile-nav__item">
                 <a href="/blogs">News</a>
             </li>
-            <li class="main-header__item">
+            <li class="mobile-nav__item">
                 <a href="/login">Sign In</a>
             </li>
-            <li class="main-header__item">
+            <li class="mobile-nav__item">
                 <a href="/register">Sign Up</a>
             </li>
             <% } else { %>
-            <li class="main-header__item">
-                <a href="/blogs">News</a>
+            <li class="mobile-nav__item">
+                <a href="/">News</a>
             </li>
-            <li class="main-header__item">
+            <li class="mobile-nav__item">
                 <a href="/profile">Profile</a>
             </li>
-            <li class="main-header__item">
+            <li class="mobile-nav__item">
                 <a href="/logout">Sign Out</a>
             </li>
             <% } %>
         </ul>
-    </nav>
-</header>
-
-<nav class="mobile-nav">
-    <ul class="mobile-nav__item-list">
-        <% if(!currentUser) { %>
-        <li class="mobile-nav__item">
-            <a href="/">Home</a>
-        </li>
-        <li class="mobile-nav__item">
-            <a href="/blogs">News</a>
-        </li>
-        <li class="mobile-nav__item">
-            <a href="/login">Sign In</a>
-        </li>
-        <li class="mobile-nav__item">
-            <a href="/register">Sign Up</a>
-        </li>
-        <% } else { %>
-            <li class="mobile-nav__item">
-            <a href="/">News</a>
-        </li>
-        <li class="mobile-nav__item">
-            <a href="/profile">Profile</a>
-        </li>
-        <li class="mobile-nav__item">
-            <a href="/logout">Sign Out</a>
-        </li>
-        <% } %>
-    </ul>
+    </div>
 </nav>
     
         <div class="container">
