--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,6 +24,9 @@
     <!-- Bootstrap CSS-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     
+    <!-- Font awesome -->
+    <script src="https://kit.fontawesome.com/8049d5025a.js"></script>
+
     <!-- Custom CSS-->
     <link rel="stylesheet" href="/stylesheets/app.css">
     <!-- Google Fonts -->
@@ -52,7 +55,7 @@
 
 <div class="backdrop"></div>
 <header class="main-header">
-    <button id="side-menu-toggle">Menu</button>
+    <button id="side-menu-toggle"><i class="fas fa-bars"></i></button>
         <nav class="main-header__nav">
             <div class="container">
             <ul class="main-header__item-list">
