--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -108,7 +108,7 @@
                 <a href="/">News</a>
             </li>
             <li class="mobile-nav__item">
-                <a href="/profile">Profile</a>
+                <a href="/users/<%= user._id %>">Profile</a>
             </li>
             <li class="mobile-nav__item">
                 <a href="/logout">Sign Out</a>
