--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,18 +2,26 @@
     <div class="container">
         <div class="form_container">
             <form class="form-width" action="/register" method="post">
+                <h3>Register</h3>
                 <div class="form-group">
-                    <h3>Register</h3>
-                    <label for="name">Full Name</label>
-                    <input class="form-control" type="text" id="name" name="name" placeholder="Full name" required>
+                    <label for="firstName">First Name</label>
+                    <input class="form-control" type="text" id="firstName" name="firstName" placeholder="Cecil" required>
+                </div>
+                <div class="form-group">
+                    <label for="lastName">Last Name</label>
+                    <input class="form-control" type="text" id="lastName" name="lastName" placeholder="Dobbs" required>
                 </div>
                 <div class="form-group">
                     <label for="username">Username</label>
-                    <input class="form-control" type="text" id="username" name="username" placeholder="Username" required>
+                    <input class="form-control" type="text" id="username" name="username" placeholder="CC Dobbs" required>
+                </div>
+                <div class="form-group">
+                    <label for="avatar">Avatar</label>
+                    <input class="form-control" type="text" id="avatar" name="avatar" placeholder="https://yourimage.jpg" required>
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input class="form-control" type="email" id="email" name="email" placeholder="Email address" required>
+                    <input class="form-control" type="email" id="email" name="email" placeholder="CCdobbs@mymail.com" required>
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
